<resources>
    <string name="app_name">运动</string>
    <string name="app_log">log</string>
    <string name="my_name">uu继</string>
    <string name="my_mobile">185*****769</string>
    <string name="home_advisory">咨询</string>
    <string name="my_login">立即登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="login_name">请输入用户名（数字，英文）</string>
    <string name="login_pad">请输入密码（6 – 18位）</string>

    <string name="record_talk_short_time">说话时间太短</string>
    <string name="record_party_talking">对方正在说话...</string>
    <string name="record_press_speak">按住 说话</string>
    <string name="record_release_end">松开 结束</string>
    <string name="record_no_storage">暂无外部存储</string>
    <string name="record_release_finger_cancel_send">松开手指，取消发送</string>
    <string name="record_finger_up_cancel_send">手指上滑，取消发送</string>
    <string name="chat_send">发送</string>
    <string name="record_create_file_fail">创建文件失败</string>
    <string name="record_error_status">录音状态异常,请稍后重试</string>
    <string name="record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="multimedia_photo">图片</string>
    <string name="multimedia_file">文件</string>
    <string name="multimedia_camera">拍摄</string>
    <string name="business_card">个人名片</string>
    <string name="time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="day_before_yesterday">前天&#160;</string>
    <string name="yesterday">昨天&#160;</string>
    <string name="voice_length">10"</string>
    <string name="symbol_second">\"</string>
    <string name="file_not_found">文件丢失，尝试重新获取</string>
    <string name="download_completed">下载完成</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="resend_message">重新发送该信息？</string>
    <string name="cancel">取消</string>
    <string name="resend_commit">重发</string>
    <string name="server_803008">消息已发出，但被对方拒收了。</string>
    <string name="loading">正在加载</string>
    <string name="file_not_support_hint">无法打开该文件类型</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="type_smallvideo">[小视频]</string>
    <string name="type_video">[视频]</string>
    <string name="type_custom">[自定义消息]</string>
</resources>
