<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_status_bar_transparent" />

        <com.dome.push.view.RxTitle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftIconVisibility="true" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:digits="@string/login_digits"
            android:hint="@string/login_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:digits="@string/login_digits"
            android:hint="@string/login_pad"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="105dp"
        android:text="@string/login_register"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:text="@string/my_login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>