<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <!-- 语音/文字切换-->
        <ImageView
            android:id="@+id/btn_voice_or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/voice_or_text" />

        <!--语音输入-->
        <com.dome.push.view.RecordVoiceButton
            android:id="@+id/btn_voice"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/rl_multi_and_send"
            android:layout_toRightOf="@id/btn_voice_or_text"
            android:background="@drawable/btn_voice_back"
            android:text="@string/record_press_speak"
            android:textColor="@color/color_72"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@+id/rl_multi_and_send"
            android:layout_toRightOf="@id/btn_voice_or_text"
            android:background="@mipmap/input_back_gray"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <!--输入框-->
            <com.dome.push.view.EmoticonsEditText
                android:id="@+id/et_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:lineSpacingExtra="4dp"
                android:maxLines="4"
                android:paddingLeft="8dp"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_multi_and_send"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <!--表情-->
            <ImageView
                android:id="@+id/btn_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="7dp"
                android:contentDescription="@string/app_log"
                android:src="@mipmap/icon_face_nomal" />

            <!--apps 功能-->
            <ImageView
                android:id="@+id/btn_multimedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/app_log"
                android:src="@drawable/multi_back" />

            <!--发送-->
            <Button
                android:id="@+id/btn_send"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="9dp"
                android:background="@drawable/solid_25_5"
                android:text="@string/chat_send"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <com.dome.push.view.FuncLayout
        android:id="@+id/ly_kvml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible" />
</LinearLayout>